<resources>
    <string name="app_name">Just Java</string>
    <string name="TOPPING">TOPPINGS</string>
    <string name="hello_world">Quantity</string>
    <string name="price">Order Summary</string>
    <string name="action_settings">Settings</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Enter Name</string>
</resources>
