<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/TOPPING"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="16dp"

            />

            <CheckBox
                android:id="@+id/whippedCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whippedCream"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            />


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/hello_world"
            android:layout_marginBottom="16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"

                />


            <TextView
                android:id="@+id/quantity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"

                />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="ORDER"
            />


    </LinearLayout>
</ScrollView>